policy/testdata/invalid_expressions/template.compile.err
ERROR: ../testdata/invalid_expressions/template.yaml:1:1: missing required field(s): [kind]
 | apiVersion: policy.acme.co/v1
 | ^
ERROR: ../testdata/invalid_expressions/template.yaml:13:14: value not assignable to schema type: value=int, schema=string
 |       enum: [1, 3.2, false, "okay"]
 | .............^
ERROR: ../testdata/invalid_expressions/template.yaml:13:17: value not assignable to schema type: value=double, schema=string
 |       enum: [1, 3.2, false, "okay"]
 | ................^
ERROR: ../testdata/invalid_expressions/template.yaml:13:22: value not assignable to schema type: value=bool, schema=string
 |       enum: [1, 3.2, false, "okay"]
 | .....................^
ERROR: ../testdata/invalid_expressions/template.yaml:16:13: undefined field 'grating'
 |     hi: rule.grating
 | ............^
ERROR: ../testdata/invalid_expressions/template.yaml:19:5: field redeclaration error: uintVal
 |     uintVal: 9223372036854775809
 | ....^
ERROR: ../testdata/invalid_expressions/template.yaml:21:26: undeclared reference to 'byte' (in container '')
 |     - match: hi == '' && byte == ''
 | .........................^
ERROR: ../testdata/invalid_expressions/template.yaml:26:7: undeclared reference to 'bye' (in container '')
 |       bye != ''
 | ......^
ERROR: ../testdata/invalid_expressions/template.yaml:27:13: undefined field 'greting'
 |       ? rule.greting
 | ............^